--- a/project01/styles/styles.css
+++ b/project01/styles/styles.css
@@ -1,7 +1,4 @@
-* {
-    padding: 0;
-    margin: 0;
-}
+
 * {
     padding: 0;
     margin: 0;
@@ -48,7 +45,7 @@ nav {
     background-repeat: no-repeat;
 }
 header {
-    background: url(../images/background01.jpg) no-repeat center center;
+    background: url(../images/background.jpg) no-repeat center center;
     background-size: cover;
     height: 100%;
 }
