--- a/poject02/styles/styles.css
+++ b/poject02/styles/styles.css
@@ -147,6 +147,7 @@ section .highlight a:hover::before {
     right: 0;
     bottom: 0;
     background: #f7ba3e;
+    opacity: 0.7;
     color: #fff;
     font-size: 80px;
     display: flex;
