--- a/poject02/styles/styles.css
+++ b/poject02/styles/styles.css
@@ -108,7 +108,7 @@ header .intro .button {
     margin-top: 20px;
 }
 section {
-    margin-top: 30px;
+    margin-top: 120px;
     text-align: center;
 }
 section > h2 {
@@ -146,7 +146,7 @@ section .highlight a:hover::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #f7ba3e;
+    background-color: #f7ba3e;
     opacity: 0.7;
     color: #fff;
     font-size: 80px;
@@ -166,4 +166,76 @@ section .highlight figcaption {
 section .highlight p {
     color: #666;
     margin-top: 10px;
+}
+.detail h3 {
+    padding: 10px;
+}
+.detail p {
+    font-size: 15px;
+    color: #666;
+}
+.character {
+    padding-top: 70px; 
+}
+.actor {
+    padding-bottom: 70px;
+}
+.odd > .detail {
+    float: left;
+    width: 33.333%;
+    text-align: right;
+}
+.even > .detail {
+    float: right;
+    width: 33.333%;
+    text-align: left;
+}
+.photo img {
+    width: 170px;
+    border-radius: 50%;
+    border: 5px solid #ccc;
+}
+.photo img:hover {
+    border: 5px solid #f7ba3e;
+}
+
+.odd img {
+    margin-right: 33.333%;
+}
+.even img {
+    margin-left: 33.333%;
+}
+.team {
+    padding-top: 70px; 
+}
+.member {
+    float: left;
+    width: 33.33%;
+}
+.member img {
+    width: 225px;
+    height: 225px;
+    border: 5px solid white;
+    border-radius: 50%;
+}
+
+.icon-member {
+    margin-left: 15px;
+    margin-top: 15px;
+    font-size: 32px;
+    color: black;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+}
+.icon-member:hover {
+    color: #f7ba3e;
+}
+.text {
+    font-size: 17px;
+    color: gray;
+    width: 70%;
+    margin: 50px auto 0 auto;
+    padding-bottom: 100px;
 }
