--- a/poject02/styles/styles.css
+++ b/poject02/styles/styles.css
@@ -133,6 +133,9 @@ section > ul > li {
 section > ul p {
     margin-top: 10px;
 }
+section .highlight {
+    padding-top: 70px;
+}
 section .highlight figure {
     width: calc(33.33% - 20px);
     margin: 10px;
