--- a/OnlineMusic/styles/style.css
+++ b/OnlineMusic/styles/style.css
@@ -18,14 +18,18 @@ a {
     clear: both;
 }
 
-/* .cover {
+.cover {
     position: relative;
     height: 100%;
     min-height: 600px;
     background: url(../images/album1.jpg) center center no-repeat;
     background-size: cover;
     filter: blur(5px);
-} */
+}
+.content {
+    position: absolute;
+    top: 0;
+}
 
 /* header style */
 .header {
@@ -68,6 +72,9 @@ a {
     color: #e83c3c;
     cursor: pointer;
 }
+.main .info {
+    margin-left: 510px;
+}
 
 .main .info .album-name {
     display: inline-block;
@@ -98,4 +105,18 @@ a {
     margin-top: 5px;
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer;
+}
+.footer .album-list figure {
+    width: calc(16.666% - 20px);
+    margin: 10px;
+    float: left;
+}
+.footer .album-list figure a {
+    display: block;
+    height: 180px;
+    position: relative;
+}
+.footer .album-list figure a img {
+    width: 100%;
+    height: 100%;
 }
