--- a/OnlineMusic/styles/style.css
+++ b/OnlineMusic/styles/style.css
@@ -27,6 +27,7 @@ a {
     filter: blur(5px);
 }
 .content {
+    width: 100%;
     position: absolute;
     top: 0;
 }
@@ -46,9 +47,8 @@ a {
 }
 /* content style */
 .main {
-    padding: 60px 120px 60px;
+    padding: 60px 160px 0px 160px;;
 }
-
 .main .control {
     float: left;
     margin-right: 110px;
@@ -73,7 +73,7 @@ a {
     cursor: pointer;
 }
 .main .info {
-    margin-left: 510px;
+    margin-left: 500px;
 }
 
 .main .info .album-name {
@@ -88,17 +88,20 @@ a {
 .main .info .description {
     margin-top: 30px;
     font-size: 32px;
-    font-weight: 600;
+
     margin-bottom: 100px;
+    color: #fff;
 }
 .main .info .data>span {
     padding: 0 60px 0 0;
+    color: #fff;
 }
 .main .info .data>span .word {
     padding-left: 10px;
 }
 .main .info .progress {
-    width: 400px;
+    width: 546px;
+    margin-top: 60px;
 }
 .main .info .progress .bar{
     height: 3px;
@@ -106,17 +109,45 @@ a {
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
+.main .info .time, .song-name, .author {
+    color: #fff;
+    font-size: 18px;
+    margin-top: 10px;
+}
+.main .info .time {
+    float: right;
+}
+/* footer style */
+.footer {
+    width: 100%;
+}
+.footer::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 490px);
+    background: rgba(224, 219, 219, 0.5);
+}
+.footer .album-list {
+    width: calc(100% - 320px);
+    margin: 20px auto;
+    padding: 0 30px;
+    text-align: center;
+}
 .footer .album-list figure {
-    width: calc(16.666% - 20px);
-    margin: 10px;
+    width: calc(16.667% - 20px);
+    margin: 10px 10px 0 10px; 
     float: left;
 }
 .footer .album-list figure a {
     display: block;
-    height: 180px;
     position: relative;
 }
 .footer .album-list figure a img {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
+}
+.footer .album-list figure figcaption {
+    color: #aaa;
 }
