--- a/OnlineMusic/styles/style.css
+++ b/OnlineMusic/styles/style.css
@@ -6,7 +6,6 @@
 }
 html, body, main {
     height: 100%;
-    font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: 300;
 }
 a {
@@ -69,7 +68,7 @@ a {
     padding: 0 30px;
     display: inline-block;
     font-size: 30px;
-    color: #e83c3c;
+    color: #fff;
     cursor: pointer;
 }
 .main .info {
@@ -88,7 +87,7 @@ a {
 .main .info .description {
     margin-top: 30px;
     font-size: 32px;
-
+    font-weight: 300;
     margin-bottom: 100px;
     color: #fff;
 }
@@ -108,6 +107,11 @@ a {
     margin-top: 5px;
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer;
+}
+.main .info .progress .progress-now {
+    background-color: #ccc;
+    height: 3px;
+    position: relative;
 }
 .main .info .time, .song-name, .author {
     color: #fff;
@@ -149,5 +153,5 @@ a {
     height: 80%;
 }
 .footer .album-list figure figcaption {
-    color: #aaa;
+    color: #eee;
 }
