--- a/OnlineMusic/styles/style.css
+++ b/OnlineMusic/styles/style.css
@@ -71,6 +71,9 @@ a {
     color: #fff;
     cursor: pointer;
 }
+.main .control .control-panel span:hover {
+    color: #aaa;
+}
 .main .info {
     margin-left: 500px;
 }
@@ -151,6 +154,9 @@ a {
 .footer .album-list figure a img {
     width: 80%;
     height: 80%;
+}
+.footer .album-list figure a img:hover {
+    box-shadow: 0px 3px 4px 5px rgba(0, 0, 0,0.2);
 }
 .footer .album-list figure figcaption {
     color: #eee;
