--- a/OnlineMusic/styles/style.css
+++ b/OnlineMusic/styles/style.css
@@ -17,6 +17,9 @@ a {
     display: block;
     clear: both;
 }
+.hide {
+    display: none;
+}
 
 .cover {
     position: relative;
@@ -213,7 +216,9 @@ a {
     height: 3px;
     position: relative;
 }
-.main .info .time, .song-name, .author {
+.main .info .time,
+.song-name,
+.author {
     color: #fff;
     font-size: 18px;
     margin-top: 10px;
@@ -292,3 +297,66 @@ a {
     color: #eee;
 }
 
+.play {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+.play .play-img {
+    width: 300px;
+    margin-top: 140px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.play .play-img img {
+    width: 300px;
+    height: 300px;
+    box-shadow: 0px 3px 4px 5px rgba(0, 0, 0,0.3);
+}
+.play .update {
+    width: 100%;
+    height: calc(100% - 502px);
+    background: rgba(224, 219, 219, 0.2);
+    text-align: center;
+}
+.play .play-bar {
+    width: 100%;
+    margin-top: 55px;
+    height: 3px;
+}
+/* .main .info .progress .bar{
+    height: 3px;
+    margin-top: 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+} */
+.play .play-progress-now {
+    background-color: #ccc;
+    height: 3px;
+    position: relative;
+}
+.play .play-time,
+.play-title,
+.play-author {
+    color: #fff; 
+    font-size: 18px;
+}
+.play .play-title,
+.play-author {
+    margin-top: 50px;
+}
+.play .play-author {
+    margin-top: 15px;
+}
+.play .play-time {
+    float: right;
+    margin-top: 10px; 
+    margin-right: 20px;
+    padding-bottom: 10px;
+}
+.play .play-title {
+    font-size: 28px;
+    font-weight: 500;
+}
