--- a/movie/styles/style.css
+++ b/movie/styles/style.css
@@ -18,7 +18,7 @@ body {
 }
 main {
     height: calc(100vh - 50px);
-    overflow: scroll;
+    overflow-y: scroll;
     /* 移动端最好加上这个效果，弹性滑动 */
     -webkit-overflow-scrolling: touch;
 }
